--- a/styles/utils.scss
+++ b/styles/utils.scss
@@ -35,10 +35,7 @@
     $sin: 0;
     $theta: rad($theta);
     @for $i from 0 through 10 {
-        $sin: $sin +
-            ipow(-1, $i) *
-            ipow($theta, (2 * $i + 1)) /
-            factorial(2 * $i + 1);
+        $sin: $sin + ipow(-1, $i) * ipow($theta, (2 * $i + 1)) / factorial(2 * $i + 1);
     }
     @return $sin;
 }
@@ -47,13 +44,7 @@
     @return sin($PI/2 - $theta);
 }
 
-@mixin attr-x(
-    $attr,
-    $attr-count: 10,
-    $attr-steps: 10,
-    $unit: "%",
-    $attr-abrv: null
-) {
+@mixin attr-x($attr, $attr-count: 10, $attr-steps: 10, $unit: "%", $attr-abrv: null) {
     $attr-list: null;
 
     @if not $attr-abrv {
@@ -63,11 +54,7 @@
     @for $i from 1 through $attr-count {
         $attr-value: $attr-steps * $i;
 
-        $attr-list: append(
-            $attr-list,
-            unquote(".#{$attr}-#{$attr-value}"),
-            comma
-        );
+        $attr-list: append($attr-list, unquote(".#{$attr}-#{$attr-value}"), comma);
 
         .#{$attr-abrv}-#{$attr-value} {
             #{$attr}: #{$attr-value}#{$unit};
@@ -178,8 +165,8 @@
 
         transform: translateY(-5px);
 
-        box-shadow: var(--box-shadow-hl) var(--box-shadow-vl)
-            var(--box-shadow-br) var(--box-shadow-sr) var(--box-shadow-color);
+        box-shadow: var(--box-shadow-hl) var(--box-shadow-vl) var(--box-shadow-br)
+            var(--box-shadow-sr) var(--box-shadow-color);
     }
 }
 
@@ -221,6 +208,7 @@
         visibility: visible;
     }
 }
+
 
 @import url("https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;400;500;700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Fraunces:ital,opsz,wght@0,9..144,100..900;1,9..144,100..900&display=swap");
@@ -378,3 +366,4 @@
         background-position: 0% 82%;
     }
 }
+
